--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <title>音札 -おとふだ-</title>
 </head>
 <body>
-    <header>おとふだ</header>
+    <header>音札<span>-おとふだ-</span></header>
     <section data-section-name="title">1</section>
     <section data-section-name="body">2</section>
     <section data-section-name="config">3</section>
     <script src="main.js"></script>
+    <div id="scroll"></div>
 </body>
 </html>
