画像とCSSの配置(仮)

--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
 </head>
 <body>
     <header>
-        <a id="to-top">音札<span>-おとふだ-</span></a>
+        <a id="to-top">
+            <img src="title.png" alt="音札">
+            <span><img src="title-sub.png" alt="おとふだ"></span>
+        </a>
     </header>
 
     <section data-section-name="title">
-        <div id="title-text">これはテキストです<br>ここには文が入ります<br>これはタイトルテキストです</div>
+        <div id="title-text">
+            これはテキストです<br>
+            ここには文が入ります<br>
+            これはタイトルテキストです<br>
+            よろしくおねがいします
+        </div>
     </section>
 
     <section data-section-name="body">
-        <div style="padding: 20px">
+        <div style="padding: 20px; line-height: 50px">
             ここには通常の説明が入ります<br>
             画像が入ったりします<br>
             これはボディーの説明用テキストです
