ティザー整備

--- a/index.html
+++ b/index.html
@@ -23,25 +23,24 @@
 
     <section data-section-name="title">
         <div id="title-text">
-            これはテキストです<br>
-            ここには文が入ります<br>
-            これはタイトルテキストです<br>
-            よろしくおねがいします
+            花札　×　対戦　×　音楽　
+            <br><br>
+            　これまでにない新感 覚　
+            <br>
+            　　対戦型音楽 カ ―ドゲ ―ム
         </div>
     </section>
 
     <section data-section-name="body">
         <div style="padding: 20px; line-height: 50px">
-            ここには通常の説明が入ります<br>
-            画像が入ったりします<br>
-            これはボディーの説明用テキストです
+            <h1>2019</h1>
+            comming soon...
         </div>
     </section>
     <section data-section-name="links">
         <div id="links-box">
             <a href="https://twitter.com/otofuda" class="link fab fa-twitter"></a>
             <a href="https://otofudaproject.tumblr.com/" class="link fab fa-tumblr"></a>
-            <a href="" class="link fab fa-youtube"></a>
         </div>
     </section>
     <script src="main.js"></script>
