画像リンクを配置

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
     <section data-section-name="body">
         <div style="padding: 20px; line-height: 50px">
-            <h1>2019</h1>
-            comming soon...
+            <img src="./button1.png" class="imgbutton" alt="1"><br>
+            <img src="./button2.png" class="imgbutton" alt="2"><br>
+            <img src="./button3.png" class="imgbutton" alt="3">
         </div>
     </section>
     <section data-section-name="links">
