--- a/index.html
+++ b/index.html
@@ -132,15 +132,14 @@
             <img src="title.png" alt="音札" id="header-title">
             <span><img src="title-sub.png" alt="おとふだ" id="header-title-sub"></span>
         </a>
+        <a id="header-tweet" href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=%E9%9F%B3%E6%9C%AD%20-%E3%81%8A%E3%81%A8%E3%81%B5%E3%81%A0-&tw_p=tweetbutton&url=https://j.mp/otofuda" target="_blank">
+            <i class="fab fa-twitter"></i>
+        </a>
     </header>
 
     <section data-section-name="title">
         <div id="title-text">
-            花札　×　対戦　×　音楽　
-            <br><br>
-            　これまでにない新感 覚　
-            <br>
-            　　対戦型音楽 カ ―ドゲ ―ム
+            <img src="./copy.png" alt="">
         </div>
     </section>
 
@@ -151,7 +150,7 @@
         <img src="./button3.png" class="imgbutton" alt="3">
     </section>
     <section data-section-name="links">
-        <h2>最新情報</h2>
+        <h2>最新情報はこちら</h2>
         <div id="links-box">
             <a href="https://twitter.com/otofuda" class="link fab fa-twitter"></a>
             <a href="https://otofudaproject.tumblr.com/" class="link fab fa-tumblr"></a>
