Bug Fix for Smartphones

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
     <nav>
         <div class="row">
             <div class="columns">
-                <a href="/"><img src="./title.png" alt="音札"></a>
-                <a class="item" href="./music">遊び方</a>
+                <a href="./"><img src="./title.png" alt="音札"></a>
+                <a class="item" href="./play">遊び方</a>
                 <a class="item" href="./music">収録楽曲</a>
-                <a class="item" href="./music">キャラクター</a>
+                <a class="item" href="./char">キャラ</a>
             </div>
         </div>
     </nav>
