--- a/music.html
+++ b/music.html
@@ -133,16 +133,17 @@
     <nav>
         <div class="row">
             <div class="columns">
-                <a href="/"><img src="./title.png" alt="音札"></a>
-                <a class="item" href="./music">遊び方</a>
+                <a href="./"><img src="./title.png" alt="音札"></a>
+                <a class="item" href="./play">遊び方</a>
                 <a class="item active" href="./music">収録楽曲</a>
-                <a class="item" href="./music">キャラクター</a>
+                <a class="item" href="./char">キャラ</a>
             </div>
         </div>
     </nav>
 
     <section id="music">
-        <h1 class="uk-heading-line uk-text-center"><span>収録楽曲</span></h1>
+        
+        <div class="common-large">収録楽曲</div>
         
         <div class="music">
             <div class="music-info">
