Add Search Engine Optimization

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="「花札 × 対戦 × 音楽」これまでにない新感覚対戦型音楽カードゲーム" />
+    <meta name="robots" content="noarchive">
     <script src="jquery.min.js"></script>
     <script src="jquery.scrollify.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
@@ -19,6 +21,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit-icons.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144641349-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {dataLayer.push( arguments );}
+        gtag( 'js', new Date() );
+
+        gtag( 'config', 'UA-144641349-1' );
+    </script>
+    <script type="application/ld+json">
+        { 
+          "@context": "http://schema.org/", 
+          "@type": "WebSite",
+          "name": "音札 -おとふだ-",
+          "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/"
+        } 
+    </script>
 </head>
 
 <body>
@@ -154,7 +172,7 @@
         <div id="overview-text">
             <div class="common-medium">2019年7月20日、第1回</div>
             <div class="common-large">先行ロケテスト</div>
-            <div class="common-medium">を開催しました。</div>
+            <div class="common-medium">を開催しました。<a href="https://otofudaproject.tumblr.com/">詳細</a></div>
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
                 uk-slideshow="animation: push; max-height: 400">
                 <ul class="uk-slideshow-items">
