Add Twitter Card and Fix Stylesheet

--- a/char.html
+++ b/char.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="新感覚対戦型音楽カードゲーム「音札」のキャラクター紹介です。" />
+    <meta name="robots" content="noarchive">
     <script src="jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
     <link rel="stylesheet" href="./skeleton.css" />
@@ -18,6 +20,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit-icons.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144641349-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {dataLayer.push( arguments );}
+        gtag( 'js', new Date() );
+
+        gtag( 'config', 'UA-144641349-1' );
+    </script>
+    <script type="application/ld+json">
+        { 
+          "@context": "http://schema.org/", 
+          "@type": "WebSite",
+          "name": "キャラクター" | 音札 -おとふだ-",
+          "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/char"
+        } 
+    </script>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@otofuda" />
+    <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/char" />
+    <meta property="og:title" content="キャラクター | 音札 -おとふだ-" />
+    <meta property="og:description" content="新感覚対戦型音楽カードゲーム「音札」のキャラクター紹介です。" />
+    <meta property="og:image" content="./images/thumb.png" />
 </head>
 
 <body>
