--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="「花札 × 対戦 × 音楽」これまでにない新感覚対戦型音楽カードゲーム" />
+    <meta name="thumbnail" content="./images/thumb.png" />
     <meta name="robots" content="noarchive">
     <script src="jquery.min.js"></script>
-    <script src="jquery.scrollify.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
     <link rel="stylesheet" href="./skeleton.css" />
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&amp;subset=japanese" rel="stylesheet">
@@ -37,6 +37,13 @@
           "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/"
         } 
     </script>
+    <script src="jquery.scrollify.js"></script>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@otofuda" />
+    <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/" />
+    <meta property="og:title" content="音札 -おとふだ-" />
+    <meta property="og:description" content="「花札 × 対戦 × 音楽」これまでにない新感覚対戦型音楽カードゲーム" />
+    <meta property="og:image" content="./images/thumb.png" />
 </head>
 
 <body>
