To Deploy for Web Server

--- a/play.html
+++ b/play.html
@@ -169,76 +169,7 @@
     <section data-section-name="title">
         <div id="title-copy">
             <p class="common-large">遊び方</p>
-            <p class="common-medium">「音札」は音楽ゲームに花札をモチーフにしたカードゲームによる対戦システムを持っています。</p>
-            <a onclick="$.scrollify.move('#play1')" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin">ゲームシステムについて</a>
-            <a onclick="$.scrollify.move('#play3')" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin">ゲームの進み方</a>
-            <a class="scroll" onclick="$.scrollify.next()"></a>
-        </div>
-    </section>
-
-    <section data-section-name="play1">
-        <div id="title-copy">
-            <p class="common-large">筐体について</p>
-            <p class="common-medium">音札の筐体には、操作デバイスが1P側と2P側についています。</p>
-            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
-                uk-slideshow="animation: push; max-height: 400">
-                <ul class="uk-slideshow-items">
-                    <li>
-                        <img src="./images/cabinet01.png" alt="" uk-cover>
-                    </li>
-                    <li>
-                        <img src="images/cabinet02.jpg" alt="" uk-cover>
-                    </li>
-                </ul>
-                <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
-                    uk-slideshow-item="previous"></a>
-                <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
-                    uk-slideshow-item="next"></a>
-            </div>
-            <a class="scroll" onclick="$.scrollify.next()"></a>
-        </div>
-    </section>
-
-    <section data-section-name="play2">
-        <div id="title-copy">
-            <p class="common-large">操作デバイスについて</p>
-            <p class="common-medium">操作デバイスには、それぞれ5つの鍵盤と空中を操作するような感覚を実現する多次元入力デバイスがついています。</p>
-            <img src="./images/kenban.png" alt="" uk-img>
-            <br>
-            <a class="scroll" onclick="$.scrollify.next()"></a>
-        </div>
-    </section>
-
-    <section data-section-name="play3">
-        <div id="title-copy">
-            <p class="common-large">ノーツについて</p>
-            <p class="common-medium">音札には4種類の「ノーツ」(音符)があり、それぞれ判定ラインに重なった瞬間に対応するアクションを行います。</p>
-            <table class="uk-table uk-table-divider uk-table-justify common-medium">
-                <thead>
-                    <tr>
-                        <th>名前</th>
-                        <th>動作</th
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>TAPノーツ</td>
-                        <td>レーンに対応する鍵盤を押します</td>
-                    </tr>
-                    <tr>
-                        <td>ロングノーツ</td>
-                        <td>レーンに対応する鍵盤を始点から終点まで押し続けます。終点には離す判定があります</td>
-                    </tr>
-                    <tr>
-                        <td>フリックノーツ</td>
-                        <td>空中で手を指定された方向(左または右)に振ります</td>
-                    </tr>
-                    <tr>
-                        <td>音札ノーツ</td>
-                        <td>空中で手を強く握ることで選択している手札を場に出すことができます</td>
-                    </tr>
-                </tbody>
-            </table>
+            <p class="common-medium">comming soon...</p>
         </div>
     </section>
 
