トップに筐体画像を追加

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/" />
     <meta property="og:title" content="音札 -おとふだ-" />
     <meta property="og:description" content="「花札 × 対戦 × 音楽」これまでにない新感覚対戦型音楽カードゲーム" />
-    <meta property="og:image" content="./images/thumb.png" />
+    <meta property="og:image" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/images/thumb.png" />
 </head>
 
 <body>
@@ -167,6 +167,8 @@
         </div>
     </nav>
 
+    <img src="images/body.png" alt="筐体" class="bgimg show" id="bgimg-1">
+
     <section data-section-name="title">
         <div id="title-copy">
             <img id="title-img" src="./images/copy.png" alt="">
@@ -219,6 +221,11 @@
             <a href="https://twitter.com/otofuda" class="links-link fab fa-twitter" uk-tooltip="Twitter"></a>
             <a href="https://otofudaproject.tumblr.com/" class="links-link fab fa-tumblr" uk-tooltip="Tumblr"></a>
         </div>
+    </section>
+
+    <section data-section-name="us">
+        <div class="common-large">私達について</div>
+        学生のプロジェクトです。
     </section>
 
     <script src="main.js"></script>
