--- a/music.html
+++ b/music.html
@@ -41,7 +41,7 @@
     <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/music" />
     <meta property="og:title" content="収録楽曲 | 音札 -おとふだ-" />
     <meta property="og:description" content="新感覚対戦型音楽カードゲーム「音札」の収録楽曲の一覧です。" />
-    <meta property="og:image" content="./images/thumb.png" />
+    <meta property="og:image" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/images/thumb.png" />
 </head>
 
 <body>
