--- a/char.html
+++ b/char.html
@@ -41,7 +41,7 @@
     <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/char" />
     <meta property="og:title" content="キャラクター | 音札 -おとふだ-" />
     <meta property="og:description" content="新感覚対戦型音楽カードゲーム「音札」のキャラクター紹介です。" />
-    <meta property="og:image" content="./images/thumb.png" />
+    <meta property="og:image" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/images/thumb.png" />
 </head>
 
 <body>
