--- a/play.html
+++ b/play.html
@@ -42,7 +42,7 @@
     <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/play" />
     <meta property="og:title" content="遊び方 | 音札 -おとふだ-" />
     <meta property="og:description" content="新感覚対戦型音楽カードゲーム「音札」の遊び方説明です。" />
-    <meta property="og:image" content="./images/thumb.png" />
+    <meta property="og:image" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/images/thumb.png" />
 </head>
 
 <body>
