--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="./ico/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./ico/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192×192" href="./ico/android-chrome-192x192.png">
+    <link rel="manifest" href="./ico/manifest.json">
+    <meta name="theme-color" content="#303030">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="「花札 × 対戦 × 音楽」これまでにない新感覚対戦型音楽カードゲーム" />
@@ -224,8 +229,10 @@
     </section>
 
     <section data-section-name="us">
-        <div class="common-large">私達について</div>
-        学生のプロジェクトです。
+        <div class="common-large">私たちについて</div>
+        <p class="common-medium">
+            私たちは自作の音楽ゲームを制作している学生のプロジェクトです。<a href="http://www.ne.senshu-u.ac.jp/project2019/" target="_blank" rel="noopener noreferrer">ネットワーク情報学部 PROJECT 2019</a>
+        </p>
     </section>
 
     <script src="main.js"></script>
