--- a/play.html
+++ b/play.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="./ico/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./ico/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192×192" href="./ico/android-chrome-192x192.png">
+    <link rel="manifest" href="./ico/manifest.json">
+    <meta name="theme-color" content="#303030">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="新感覚対戦型音楽カードゲーム「音札」の遊び方説明です。" />
