パンくず構造化データを追加

--- a/char.html
+++ b/char.html
@@ -36,6 +36,33 @@
           "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/char"
         } 
     </script>
+    <script type="application/ld+json">
+        {
+         "@context": "http://schema.org",
+         "@type": "BreadcrumbList",
+         "itemListElement":
+         [
+          {
+           "@type": "ListItem",
+           "position": 1,
+           "item":
+           {
+            "@id": "https://www.ne.senshu-u.ac.jp/~proj2019-13",
+            "name": "音札プロジェクト"
+            }
+          },
+          {
+           "@type": "ListItem",
+          "position": 2,
+          "item":
+           {
+             "@id": "https://www.ne.senshu-u.ac.jp/~proj2019-13/char",
+             "name": "キャラクター"
+           }
+          }
+         ]
+        }
+    </script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@otofuda" />
     <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/char" />
