--- a/index.html
+++ b/index.html
@@ -42,6 +42,33 @@
           "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/"
         } 
     </script>
+    <script type="application/ld+json">
+        {
+         "@context": "http://schema.org",
+         "@type": "BreadcrumbList",
+         "itemListElement":
+         [
+          {
+           "@type": "ListItem",
+           "position": 1,
+           "item":
+           {
+            "@id": "https://www.ne.senshu-u.ac.jp/~proj2019-13",
+            "name": "音札プロジェクト"
+            }
+          },
+          {
+           "@type": "ListItem",
+          "position": 2,
+          "item":
+           {
+             "@id": "https://www.ne.senshu-u.ac.jp/~proj2019-13/",
+             "name": "TOP"
+           }
+          }
+         ]
+        }
+    </script>
     <script src="jquery.scrollify.js"></script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@otofuda" />
@@ -164,7 +191,7 @@
     <nav>
         <div class="row">
             <div class="columns">
-                <a href="./"><img src="./title.png" alt="音札"></a>
+                <a href="./"><img src="./title.png" alt="これまでにない新感覚対戦型音楽カードゲーム"></a>
                 <a class="item" href="./play">遊び方</a>
                 <a class="item" href="./music">収録楽曲</a>
                 <a class="item" href="./char">キャラ</a>
@@ -221,18 +248,16 @@
     </section>
 
     <section data-section-name="links">
-        <div class="common-large">最新情報はこちら</div>
-        <div class="links-box">
-            <a href="https://twitter.com/otofuda" class="links-link fab fa-twitter" uk-tooltip="Twitter"></a>
-            <a href="https://otofudaproject.tumblr.com/" class="links-link fab fa-tumblr" uk-tooltip="Tumblr"></a>
-        </div>
-    </section>
-
-    <section data-section-name="us">
         <div class="common-large">私たちについて</div>
         <p class="common-medium">
             私たちは自作の音楽ゲームを制作している学生のプロジェクトです。<a href="http://www.ne.senshu-u.ac.jp/project2019/" target="_blank" rel="noopener noreferrer">ネットワーク情報学部 PROJECT 2019</a>
         </p>
+        <div class="common-large">最新情報はこちら</div>
+        <div class="links-box">
+            <a href="https://twitter.com/otofuda" class="links-link fab fa-twitter" uk-tooltip="Twitter"></a>
+            <a href="https://otofudaproject.tumblr.com/" class="links-link fab fa-tumblr" uk-tooltip="Tumblr"></a>
+            <a href="https://www.youtube.com/channel/UC9G3cMsWdkGC6QJz1EbczBg" class="links-link fab fa-youtube" uk-tooltip="YouTube"></a>
+        </div>
     </section>
 
     <script src="main.js"></script>
