--- a/play.html
+++ b/play.html
@@ -41,6 +41,33 @@
           "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/play"
         } 
     </script>
+    <script type="application/ld+json">
+        {
+         "@context": "http://schema.org",
+         "@type": "BreadcrumbList",
+         "itemListElement":
+         [
+          {
+           "@type": "ListItem",
+           "position": 1,
+           "item":
+           {
+            "@id": "https://www.ne.senshu-u.ac.jp/~proj2019-13",
+            "name": "音札プロジェクト"
+            }
+          },
+          {
+           "@type": "ListItem",
+          "position": 2,
+          "item":
+           {
+             "@id": "https://www.ne.senshu-u.ac.jp/~proj2019-13/play",
+             "name": "遊び方"
+           }
+          }
+         ]
+        }
+    </script>
     <script src="jquery.scrollify.js"></script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@otofuda" />
